fix: smaller spacing for mobile devices

--- a/src/Views/Topic/topic.styl
+++ b/src/Views/Topic/topic.styl
@@ -210,6 +210,7 @@
         padding-right 20px
         margin-bottom 20px
         .topic-attrs
+          padding-left 48px
           >span .avatar
             width 36px
             height 36px
@@ -306,6 +307,10 @@
                 background-color rgba(55,55,55,.62)
 
   @media (max-width: 420px)
+    .topic-main
+      .topic-attrs-wrap
+        .topic-attrs
+          padding-left 46px
     .topic-replies
       .topic-reply
         .reply-content
